--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,17 @@
 {
-	"description" : "The CodeIgniter framework",
-	"name" : "codeigniter/framework",
+	"description": "The CodeIgniter framework",
+	"name": "codeigniter/framework",
+	"type": "project",
+	"homepage": "http://codeigniter.com",
 	"license": "MIT",
-	"require": {
-		"php": ">=5.2.4"
+	"support": {
+		"forum": "http://forum.codeigniter.com/",
+		"wiki": "https://github.com/bcit-ci/CodeIgniter/wiki",
+		"irc": "irc://irc.freenode.net/codeigniter",
+		"source": "https://github.com/bcit-ci/CodeIgniter"
 	},
-	"require-dev": {
-		"mikey179/vfsStream": "1.1.*"
+	"require": {
+		"twbs/bootstrap": "*@dev",
+		"components/jquery": "2.*"
 	}
 }
